fix : add whitespace nowrap to prevent break the text for small devices

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1571,6 +1571,10 @@ select {
   overflow: hidden;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
